# nevesPy

./: README.md  pyproject.toml
src/: calc.py  calc_time.py  lists.py  strings.py
src/calc/: __init__.py
src/fs/: __init__.py  csv.py  json.py  pdf.py
