[build-system]
requires = ["setuptools>=61.0.0,<69.3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "NevesPy"
description = "My personal collection of Python utilities."
license = { file = "LICENSE.md" }
dynamic = ["version"]
requires-python = ">= 3.10"

dependencies = ["pypdf>=5.1.0", "pypdf[crypto]>=5.1.0"]
authors = [{ name = "João Neves", email = "joao95neves@gmail.com" }]
readme = "README.md"

[tool.setuptools]
packages = ["nevespy", "nevespy.fs", "nevespy.calc"]
package-dir = { "nevespy" = "src", "nevespy.fs" = "src/fs", "nevespy.calc" = "src/calc" }
